<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui</name>
  <version>0.0.0</version>
  <description>GUI's for controlling pumps</description>
  <maintainer email="bramo@live.nl">bram</maintainer>
  <license>License declaration</license>
  <exec_depend>keycontrol_gui</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>range_filter</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>re</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
